--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.14.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "prettier": "^2.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-fast-image": "^8.3.4",
